--- a/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <configuration>
   <system.web>
-    <compilation debug="false" targetFramework="4.5.2">
+    <compilation debug="false" targetFramework="4.5.2" >
     </compilation>
-    <httpRuntime targetFramework="4.5.2" allowDynamicModuleRegistration="true" />
+    <httpRuntime targetFramework="4.5.2" allowDynamicModuleRegistration="true"  />
     <webServices>
       <protocols>
         <remove name="HttpGet" />
@@ -14,7 +14,7 @@
         <add name="HttpPostLocalhost" />
       </protocols>
     </webServices>
-    <customErrors mode="Off" />
+    <customErrors mode="Off" allowNestedErrors="true" />
   </system.web>
   <system.webServer>
     <security>
@@ -42,15 +42,15 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="ClubCloudBinding" >
-          <security mode="TransportWithMessageCredential">
+        <binding name="ClubCloudBinding" transferMode="Streamed" allowCookies="true" >
+          <security mode="Transport">
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
       </basicHttpBinding>
       <wsHttpBinding>
-        <binding name="ClubCloudBinding">
-          <security mode="TransportWithMessageCredential">
+        <binding name="ClubCloudBinding" allowCookies="true">
+          <security mode="Transport">
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
@@ -62,15 +62,15 @@
         <binding name="ClubCloudBinding" />
       </mexHttpsBinding>
       <webHttpBinding>
-        <binding name="ClubCloudBinding" >
-          <security mode="TransportCredentialOnly">
+        <binding name="ClubCloudBinding" transferMode="Streamed" allowCookies="true" >
+          <security mode="Transport">
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
       </webHttpBinding>
       <basicHttpsBinding>
-        <binding name="ClubCloudBinding" >
-          <security mode="TransportWithMessageCredential">
+        <binding name="ClubCloudBinding" transferMode="Streamed" allowCookies="true" >
+          <security mode="Transport">
             <transport clientCredentialType="InheritedFromHost" />
           </security>
         </binding>
@@ -80,7 +80,7 @@
       <endpointBehaviors>
         <behavior name="ClubCloudEndPoint">
           <!-- <enableWebScript />-->
-          <dataContractSerializer ignoreExtensionDataObject="false" />
+          <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="6000000"/>
           <endpointDiscovery enabled="true" />
         </behavior>
       </endpointBehaviors>
@@ -88,12 +88,12 @@
         <behavior name="showFaults">
           <serviceDebug includeExceptionDetailInFaults="true" />
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <dataContractSerializer ignoreExtensionDataObject="false" />
+          <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="6000000" />
         </behavior>
         <behavior name="ClubCloudMobiel">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true" />
-          <dataContractSerializer ignoreExtensionDataObject="false" />
+          <dataContractSerializer ignoreExtensionDataObject="false" maxItemsInObjectGraph="6000000"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
