--- a/ClubCloud.Service/ClubCloud.Service.csproj
+++ b/ClubCloud.Service/ClubCloud.Service.csproj
@@ -181,6 +181,7 @@
       <DependentUpon>Properties.aspx.cs</DependentUpon>
     </Compile>
     <Compile Include="BaseServiceClient.cs" />
+    <Compile Include="Attributes\AllowAnonymousAttribute.cs" />
     <Compile Include="ClubCloudApplicationService_Accommodatie.cs">
       <DependentUpon>ClubCloudApplicationService_BeheerModel.tt</DependentUpon>
     </Compile>
@@ -289,6 +290,9 @@
       <DependentUpon>ClubCloudApplicationService_BeheerModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ClubCloudApplicationService_Zimbra.cs" />
+    <Compile Include="Attributes\AuthorizeAttribute.cs" />
+    <Compile Include="Attributes\FilterAttribute.cs" />
+    <Compile Include="ClubCloudLogger.cs" />
     <Compile Include="ClubCloudServiceClientModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
