--- a/ClubCloud.Internet/ClubCloud.Internet.csproj
+++ b/ClubCloud.Internet/ClubCloud.Internet.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\Common\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -86,6 +87,7 @@
     <Compile Include="Features\Aanmelden\Aanmelden.EventReceiver.cs">
       <DependentUpon>Aanmelden.feature</DependentUpon>
     </Compile>
+    <Compile Include="InternetLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -96,6 +98,9 @@
     <None Include="app.config" />
     <None Include="Features\Aanmelden\Aanmelden.feature">
       <FeatureId>{7e69b3b7-b4ef-42a8-9d19-6315d3cd67f5}</FeatureId>
+    </None>
+    <None Include="MailTemplate\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{3a800498-170a-4785-abb1-a9996f66023a}</SharePointProjectItemId>
     </None>
     <None Include="Package\Package.package">
       <PackageId>{c8918724-a19a-46d4-8300-2e8d88798c37}</PackageId>
@@ -120,6 +125,10 @@
       <Name>ClubCloud.Service</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
+      <Project>{04f1320b-7fd4-4429-985c-b3946ed2f519}</Project>
+      <Name>ClubCloud.Zimbra</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Aanmelden\AanmeldenUserControl.ascx" />
@@ -127,6 +136,8 @@
     <Content Include="Features\Aanmelden\Aanmelden.Template.xml">
       <DependentUpon>Aanmelden.feature</DependentUpon>
     </Content>
+    <Content Include="MailTemplate\aanmelden.xsl" />
+    <Content Include="MailTemplate\Elements.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
