--- a/ClubCloud.Afhangen.WebSite/ClubCloud.Afhangen.WebSite.csproj
+++ b/ClubCloud.Afhangen.WebSite/ClubCloud.Afhangen.WebSite.csproj
@@ -297,6 +297,18 @@
     <Content Include="Modules\Bootstrap\Components\bootstrap\dist\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Modules\Bootstrap\Components\bootstrap\dist\js\bootstrap.js" />
     <Content Include="Modules\Bootstrap\Components\bootstrap\dist\js\bootstrap.min.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\FormulierenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\EnquetesController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\AlbumsController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\PaginasController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\FotosController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\DocumentenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\OpmerkingenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\MededelingenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\KalenderController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\EvenementenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\CategorieenController.js" />
+    <Content Include="Modules\ClubCloud\Components\ClubCloud\BerichtenController.js" />
     <Content Include="Modules\ClubCloud\Components\ClubCloud\ClubCloud.Configuration.js" />
     <Content Include="Modules\Controllers\Accounts\LoginController.js" />
     <Content Include="Modules\Controllers\Accounts\LogoutController.js" />
